# Model-Compression

./: .gitignore
backend/: .env.example  Dockerfile  compression_engine.py  entrypoint.py  main.py  pyproject.toml
backend/core/: config.py  exceptions.py
backend/routes/: compression.py  models.py
backend/sagemaker_entry/: Dockerfile  calculator.py  compress.py  compression_engine.py
backend/sagemaker_entry/engine/: nemo_engine.py
backend/schemas/: compression.py  models.py
backend/services/: calculator.py  detector.py  sagemaker.py  storage.py
backend/tests/: test_calculator.py  test_detector.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CalculatorBreakdown.tsx  CompressionOptions.tsx  JobProgress.tsx  MetricsComparison.tsx  ModelInput.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/pages/: Configure.tsx  Home.tsx  Progress.tsx  Results.tsx
