[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.58",
    "fastapi>=0.128.8",
    "huggingface-hub>=1.5.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "transformers>=5.2.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
